# oatpp_oatpp-mcp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/oatpp-mcp/: EventStream.cpp  EventStream.hpp  Listener.cpp  Listener.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp
src/oatpp-mcp/capabilities/: Prompt.cpp  Prompt.hpp  Resource.cpp  Resource.hpp  Tool.cpp  Tool.hpp  Utils.cpp  Utils.hpp
src/oatpp-mcp/dto/: Capabilities.hpp  ClientInfo.hpp  JsonRpc.hpp  Methods.hpp  ServerInfo.hpp
src/oatpp-mcp/event/: EventStream.cpp  EventStream.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp
src/oatpp-mcp/sse/: Controller.cpp  Controller.hpp  ReadCallback.cpp  ReadCallback.hpp
src/oatpp-mcp/utils/: ApiBridge.cpp  ApiBridge.hpp  JsonSchema.cpp  JsonSchema.hpp
test/: CMakeLists.txt
test/oatpp-mcp/: tests.cpp
test/oatpp-mcp/app/: ServerTest.cpp  ServerTest.hpp
test/oatpp-mcp/app/api/controller/: UserController.hpp
test/oatpp-mcp/app/api/dto/: UserDto.hpp
test/oatpp-mcp/app/prompts/: CodeReview.cpp  CodeReview.hpp
test/oatpp-mcp/app/resources/: File.cpp  File.hpp  ProjectFiles.cpp  ProjectFiles.hpp
test/oatpp-mcp/app/tools/: Logger.cpp  Logger.hpp
